[package]
authors = ["Edwin Cheng"]
categories = ["wasm", "rust"]
description = "Web based cargo-expand toy crate!"
license = "Apache-2.0/MIT"
name = "web-mbe"
readme = "./README.md"
repository = "https://github.com/rustwasm/rust-parcel-template"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however. Also as of wee_alloc v0.4.2, does not yet work on stable
# (tested with rust v1.31.1).
wee_alloc = { version = "0.4.2", optional = true }

ra_syntax = { path = "../../../rust-analyzer/crates/ra_syntax" }
ra_mbe = { path = "../../../rust-analyzer/crates/ra_mbe" }
ra_tt =  { path = "../../../rust-analyzer/crates/ra_tt" }
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dependencies.web-sys]
version = "0.3.6"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',
]

[dependencies.wasm-bindgen]
version = "0.2.29"
features = ["serde-serialize"]

[features]
default = ["console_error_panic_hook"]


